# Like-AVITO-app-with-Django

./: README.md  manage.py  pyproject.toml
ads/: admin.py  models.py  views.py
datas/: csv_to_json.py
stavito/: asgi.py  settings.py  urls.py  wsgi.py
